infra/k8s-local/chatbot-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
        - name: chatbot
          image: guyberko/chatbot
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /ready
              port: 4000
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /live
              port: 4000
            initialDelaySeconds: 120
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 30
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-srv
spec:
  selector:
    app: chatbot
  ports:
    - name: chatbot
      protocol: TCP
      port: 4000
      targetPort: 4000
