infra/k8s-local/search-server-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-server
  template:
    metadata:
      labels:
        app: search-server
    spec:
      containers:
        - name: search-server
          image: guyberko/search-server
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /ready
              port: 4002
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /live
              port: 4002
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 30
---
apiVersion: v1
kind: Service
metadata:
  name: search-server-srv
spec:
  selector:
    app: search-server
  ports:
    - name: search-server
      protocol: TCP
      port: 4002
      targetPort: 4002
