infra/k8s-local/users-mongo.yaml
apiVersion: "apps/v1"
kind: "StatefulSet"
metadata:
  name: "users-mongo"
spec:
  serviceName: "users-mongo"
  replicas: 1
  selector:
    matchLabels:
      app: "users-mongo"
  template:
    metadata:
      labels:
        app: "users-mongo"
    spec:
      containers:
        - name: "users-mongo"
          image: "mongo"
          imagePullPolicy: "Always"
          ports:
            - containerPort: 27017
              name: "mongodb"
          volumeMounts:
            - name: "users-mongodb-persistent-storage"
              mountPath: "/data/db"
      volumes:
        - name: "users-mongodb-persistent-storage"
          persistentVolumeClaim:
            claimName: "users-mongodb-pvc"

---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "users-mongo"
  labels:
    app: "users-mongo"
spec:
  ports:
    - name: "mongodb"
      port: 27017
      targetPort: 27017
  clusterIP: "None"
  selector:
    app: "users-mongo"
