infra/k8s-local/users-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: guyberko/users
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /ready
              port: 4001
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /live
              port: 4001
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 30
---
apiVersion: v1
kind: Service
metadata:
  name: users-srv
spec:
  selector:
    app: users
  ports:
    - name: users
      protocol: TCP
      port: 4001
      targetPort: 4001
